# single_production_line_optimization

./: CMakeLists.txt  README.md  instancia_problema.cpp  main.cpp  saida.txt
include/: customTypes.hpp  executeAll.hpp  guloso.hpp  ils.hpp  instancia_problema.hpp  solucao.hpp  variableNeighborhoodDescent.hpp  variableNeighborhoodSearch.hpp  vizinhancaSwap.hpp  vizinhancaSwapp.hpp  vizinhancas.hpp
instancias/: n200A.txt  n300A.txt  n400A.txt  n60A.txt  n60B.txt  n60C.txt  n60D.txt  n60E.txt  n60F.txt  n60G.txt  n60H.txt  n60I.txt  n60J.txt  n60K.txt  n60L.txt  n60M.txt  n60N.txt  n60O.txt  n60P.txt  optimal.txt
instancias_testes/: nA5.txt  nB5.txt  nC10.txt
src/: executeAll.cpp  guloso.cpp  ils.cpp  instancia_problema.cpp  main.cpp  solucao.cpp  variableNeighborhoodDescent.cpp  variableNeighborhoodSearch.cpp  vizinhancaSwap.cpp  vizinhancas.cpp
